# lightweight-rag

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  streamlit_app.py  test_llm.py
src/: app.py  chunker.py  extractor.py  llm.py  retriever.py
