[project]
name = "lightweight-rag"
version = "0.1.0"
description = "Lightweight RAG project"
requires-python = ">=3.13"
dependencies = [
    "pymupdf4llm",
    "llama-cpp-python",
    "streamlit",
]

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
