[project]
name = "lightweight-rag"
version = "0.1.0"
description = "Lightweight RAG project"
requires-python = ">=3.13"

dependencies = [
    "streamlit",
    "pymupdf",
    "pymupdf4llm",
    "sentence-transformers",
    "faiss-cpu",
    "numpy",
    "rank-bm25",
    "google-generativeai",
]

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
